--- a/about.html
+++ b/about.html
@@ -68,7 +68,12 @@
                         <p class="lead mb-4">Vive Rural es una aplicación que pretende acabar con el problema de la España vaciada conectando a personas de pueblos con gente que quiera ir a vivir a ellos.</p>
                         <p class="lead mb-4">Para ello ofreciendo ofertas de empleo, alojamientos, información de los pueblos y más datos de interés.</p>
                     </div>
-					<img width="100%" src="static/images/imagenGanadores.jfif" style="margin-bottom:5px; box-shadow: 0px 0px 6px rgb(119, 119, 119); border-radius: 30px;"/>
+					<div width="100%" style="position: relative; margin-bottom:5px;">
+						<img width="100%" src="static/images/imagenGanadores.svg" style="position: relative;  box-shadow: 0px 0px 6px rgb(119, 119, 119); border-radius: 30px;" />
+						<img width="100%" src="static/images/ismael_en_ganadores.svg" style="visibility: hidden;pointer-events: auto;left: 0px; position: absolute; box-shadow: 0px 0px 6px rgb(119, 119, 119); border-radius: 30px; " onclick="console.log('hola')"/>
+						
+					</div>
+					
                 </section>
 
                 <hr class="dashed mt-5 mb-5 m-auto">
@@ -77,19 +82,19 @@
                     <h2 class="mb-5 blue-txt">Creada por</h2>
                     <div class="row" style="margin-bottom:10px;">
                         <div class="col-lg-4">
-                            <img class="mb-3 rounded-circle" src="static/images/jaime.png" alt="Jorge" width="140" height="140">
+                            <img class="mb-3 rounded-circle" src="static/images/jorge.png" alt="Jorge" width="140" height="140">
                             <h2 class="fw-normal cyan-txt">Jorge Aranda</h2>
                             <p>801230@unizar.es</p>
                             <p><a class="btn btn-secondary" href="mailto:801230@unizar.es">Send mail »</a></p>
                         </div>
                         <div class="col-lg-4">
-                            <img class="mb-3 rounded-circle" src="static/images/jaime.png" alt="Raúl" width="140" height="140">
+                            <img class="mb-3 rounded-circle" src="static/images/raul.png" alt="Raúl" width="140" height="140">
                             <h2 class="fw-normal cyan-txt">Raúl López</h2>
                             <p>801230@unizar.es</p>
                             <p><a class="btn btn-secondary" href="mailto:801230@unizar.es">Send mail »</a></p>
                         </div>
                         <div class="col-lg-4">
-                            <img class="mb-3 rounded-circle" src="static/images/jaime.png" alt="Ayelen" width="140" height="140">
+                            <img class="mb-3 rounded-circle" src="static/images/ayelen.png" alt="Ayelen" width="140" height="140">
                             <h2 class="fw-normal cyan-txt">Ayelen Nuño</h2>
                             <p>ayelennuno@gmail.com</p>
                             <p><a class="btn btn-secondary" href="mailto:ayelennuno@gmail.com">Send mail »</a></p>
@@ -103,13 +108,13 @@
                             <p><a class="btn btn-secondary" href="mailto:jaimeroncalperez@gmail.com">Send mail »</a></p>
                         </div>
                         <div class="col-lg-4">
-                            <img class="mb-3 rounded-circle" src="static/images/jaime.png" alt="Diana" width="140" height="140">
+                            <img class="mb-3 rounded-circle" src="static/images/diana.png" alt="Diana" width="140" height="140">
                             <h2 class="fw-normal cyan-txt">Diana Salueña</h2>
                             <p>801230@unizar.es</p>
                             <p><a class="btn btn-secondary" href="mailto:801230@unizar.es">Send mail »</a></p>
                         </div>
                         <div class="col-lg-4">
-                            <img class="mb-3 rounded-circle" src="static/images/jaime.png" alt="Ismael" width="140" height="140">
+                            <img class="mb-3 rounded-circle" src="static/images/ismael.png" alt="Ismael" width="140" height="140">
                             <h2 class="fw-normal cyan-txt">Ismael Tienda</h2>
                             <p>801230@unizar.es</p>
                             <p><a class="btn btn-secondary" href="mailto:801230@unizar.es">Send mail »</a></p>
