--- a/about.html
+++ b/about.html
@@ -84,14 +84,14 @@
                         <div class="col-lg-4">
                             <img class="mb-3 rounded-circle" src="static/images/jorge.png" alt="Jorge" width="140" height="140">
                             <h2 class="fw-normal cyan-txt">Jorge Aranda</h2>
-                            <p>801230@unizar.es</p>
-                            <p><a class="btn btn-secondary" href="mailto:801230@unizar.es">Send mail »</a></p>
+                            <p>arandasanzjorge@gmail.com</p>
+                            <p><a class="btn btn-secondary" href="mailto:arandasanzjorge@gmail.com">Send mail »</a></p>
                         </div>
                         <div class="col-lg-4">
                             <img class="mb-3 rounded-circle" src="static/images/raul.png" alt="Raúl" width="140" height="140">
                             <h2 class="fw-normal cyan-txt">Raúl López</h2>
-                            <p>801230@unizar.es</p>
-                            <p><a class="btn btn-secondary" href="mailto:801230@unizar.es">Send mail »</a></p>
+                            <p>lopez.franco@gmail.com</p>
+                            <p><a class="btn btn-secondary" href="mailto:lopez.franco@gmail.com">Send mail »</a></p>
                         </div>
                         <div class="col-lg-4">
                             <img class="mb-3 rounded-circle" src="static/images/ayelen.png" alt="Ayelen" width="140" height="140">
@@ -110,14 +110,14 @@
                         <div class="col-lg-4">
                             <img class="mb-3 rounded-circle" src="static/images/diana.png" alt="Diana" width="140" height="140">
                             <h2 class="fw-normal cyan-txt">Diana Salueña</h2>
-                            <p>801230@unizar.es</p>
-                            <p><a class="btn btn-secondary" href="mailto:801230@unizar.es">Send mail »</a></p>
+                            <p>dianasaluena@gmail.com</p>
+                            <p><a class="btn btn-secondary" href="mailto:dianasaluena@gmail.com">Send mail »</a></p>
                         </div>
                         <div class="col-lg-4">
                             <img class="mb-3 rounded-circle" src="static/images/ismael.png" alt="Ismael" width="140" height="140">
                             <h2 class="fw-normal cyan-txt">Ismael Tienda</h2>
-                            <p>801230@unizar.es</p>
-                            <p><a class="btn btn-secondary" href="mailto:801230@unizar.es">Send mail »</a></p>
+                            <p>ismaeltienda@gmail.com</p>
+                            <p><a class="btn btn-secondary" href="mailto:ismaeltienda@gmail.com">Send mail »</a></p>
                         </div>
                     </div>
                 </div>
