--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
         <link rel="stylesheet" href="static//css/cover.css">
 
         <!-- Font VGA -->
-        <link href="http://fonts.cdnfonts.com/css/perfect-dos-vga-437" rel="stylesheet">
+        <link href="https://fonts.cdnfonts.com/css/perfect-dos-vga-437" rel="stylesheet">
 
         <!-- Datatables see https://cloudtables.com/-->
         <link rel="stylesheet" type="text/css" href="static//css/datatables/dataTables.css">
