--- a/about.html
+++ b/about.html
@@ -36,10 +36,6 @@
         <!-- Font VGA -->
         <link href="https://fonts.cdnfonts.com/css/perfect-dos-vga-437" rel="stylesheet">
 
-        <!-- Datatables see https://cloudtables.com/-->
-        <link rel="stylesheet" type="text/css" href="static/css/datatables/dataTables.css">
-        <script src="static/js/datatables/jquery.js"></script>
-        <script src="static/js/datatables/jquery.dataTables.js"></script>
 		
 		<script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.11.3/gsap.min.js" integrity="sha512-gmwBmiTVER57N3jYS3LinA9eb8aHrJua5iQD7yqYCKa5x6Jjc7VDVaEA0je0Lu0bP9j7tEjV3+1qUm6loO99Kw==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
 		<script src="https://smtpjs.com/v3/smtp.js"></script>
@@ -59,6 +55,7 @@
                     </a>
                     <nav class="nav nav-masthead justify-content-center">
                         <a class="nav-link" href="./index.html">Home</a>
+						<a class="nav-link" href="./download.html">Download</a>
                         <a class="nav-link active" href="./about.html">About</a>
                     </nav>
                 </div>
