--- a/about.html
+++ b/about.html
@@ -67,8 +67,9 @@
                     <img width="120" height="120" src="static/images/viverural.png" style="margin-bottom:5px; box-shadow: 0px 0px 6px rgb(119, 119, 119); border-radius: 30px;"/>
                     <h1 class="mb-5 mt-2 display-5 fw-bold white-txt">Vive Rural</h1>
                     <div class="mx-auto">
-                        <p class="lead mb-4">Vive Rural es una aplicación que pretende acabar con el problema de la España vaciada conectando a personas de pueblos con gente que quiera ir a vivir a ellos.</p>
-                        <p class="lead mb-4">Para ello ofreciendo ofertas de empleo, alojamientos, información de los pueblos y más datos de interés.</p>
+                        <p class="lead mb-4">El equipo que ha desarrollado este prototipo y el plan de negocio de Vive Rural lo ha realizado como parte de la competición Hack For Good 2022 desde la sede de la Universidad de Zaragoza.</p>
+                        <p class="lead mb-4">Los y las integrantes del equipo son estudiantes del grado de Ingeniería Informática de entre 20 y 21 años.</p>
+						<p class="lead mb-4">Algunas de las integrantes del proyecto viven en primera persona la despoblación de sus pueblos, de lo que surge la idea de realizar esta aplicación para mostrar al mundo todas las posiblidades de vivir y trabajar en el mundo rural.</p>
                     </div>
 					<div width="100%" style="position: relative; margin-bottom:5px;">
 						<img width="100%" src="static/images/imagenGanadores.jfif" style="position: relative;  box-shadow: 0px 0px 6px rgb(119, 119, 119); border-radius: 30px;" />
