Actualización Web con premios

--- a/download.html
+++ b/download.html
@@ -49,12 +49,13 @@
 
                     <a href="./index.html" class="text-decoration-none">
                         <img width="40" height="40" src="static/images/viverural.png" style="margin-bottom:5px; box-shadow: 0px 0px 6px rgb(119, 119, 119); border-radius: 11px;"/>
-                        <span class="ms-2 fs-4">Vive Rural</span>
+                        <span class="ms-2 fs-4" style="text-shadow: 1px 1px 10px black;">Vive Rural</span>
                     </a>
                     <nav class="nav nav-masthead justify-content-center">
-                        <a class="nav-link" href="./index.html">Home</a>
-						<a class="nav-link active" href="./download.html">Download</a>
-                        <a class="nav-link" href="about.html">About</a>
+                        <a class="nav-link" style="text-shadow: 1px 1px 4px black;" href="./index.html">Home</a>
+						<a class="nav-link" style="text-shadow: 1px 1px 4px black;" href="./news.html">News</a>
+						<a class="nav-link active" style="text-shadow: 1px 1px 4px black;" href="./download.html">Download</a>
+                        <a class="nav-link" style="text-shadow: 1px 1px 4px black;" href="about.html">About</a>
                     </nav>
                 </div>
             </header>
@@ -63,9 +64,9 @@
 
                 <section class="px-4 my-5 text-center">
                     <img width="120" height="120" src="static/images/viverural.png" style="margin-bottom:5px; box-shadow: 0px 0px 6px rgb(119, 119, 119); border-radius: 30px;"/>
-                    <h1 class="mb-5 mt-2 display-5 fw-bold white-txt">Vive Rural</h1>
+                    <h1 class="mb-5 mt-2 display-5 fw-bold white-txt" style="text-shadow: 1px 1px 10px black;">Vive Rural</h1>
                     <div class="mx-auto" style="margin-bottom:50px;">
-                        <p class="lead mb-4">Descarga el prototipo de aplicación Android desarrollado para ver la interfaz y las funcionalidades del proyecto.</p>
+                        <p class="lead mb-4" style="text-shadow: 0.5px 0.5px 10px black;">Descarga el prototipo de aplicación Android desarrollado para ver la interfaz y las funcionalidades del proyecto.</p>
                     </div>		
 
 					<!--Button download --------------------------------->
