--- a/about.html
+++ b/about.html
@@ -51,12 +51,13 @@
 
                     <a href="./index.html" class="text-decoration-none">
                         <img width="40" height="40" src="static/images/viverural.png" style="margin-bottom:5px; box-shadow: 0px 0px 6px rgb(119, 119, 119); border-radius: 11px;"/>
-                        <span class="ms-2 fs-4">Vive Rural</span>
+                        <span class="ms-2 fs-4" style="text-shadow: 1px 1px 10px black;">Vive Rural</span>
                     </a>
                     <nav class="nav nav-masthead justify-content-center">
-                        <a class="nav-link" href="./index.html">Home</a>
-						<a class="nav-link" href="./download.html">Download</a>
-                        <a class="nav-link active" href="./about.html">About</a>
+                        <a class="nav-link" style="text-shadow: 1px 1px 4px black;" href="./index.html">Home</a>
+						<a class="nav-link" style="text-shadow: 1px 1px 4px black;" href="./news.html">News</a>
+						<a class="nav-link" style="text-shadow: 1px 1px 4px black;" href="./download.html">Download</a>
+                        <a class="nav-link active" style="text-shadow: 1px 1px 4px black;" href="./about.html">About</a>
                     </nav>
                 </div>
             </header>
@@ -65,10 +66,10 @@
 
                 <section class="px-4 my-5 text-center">
                     <img width="120" height="120" src="static/images/viverural.png" style="margin-bottom:5px; box-shadow: 0px 0px 6px rgb(119, 119, 119); border-radius: 30px;"/>
-                    <h1 class="mb-5 mt-2 display-5 fw-bold white-txt">Vive Rural</h1>
-                    <div class="mx-auto">
+                    <h1 class="mb-5 mt-2 display-5 fw-bold white-txt" style="text-shadow: 1px 1px 10px black;">Vive Rural</h1>
+                    <div class="mx-auto" style="text-shadow: 0.5px 0.5px 10px black;">
                         <p class="lead mb-4">El equipo que ha desarrollado este prototipo y el plan de negocio de Vive Rural lo ha realizado como parte de la competición Hack For Good 2022 desde la sede de la Universidad de Zaragoza.</p>
-                        <p class="lead mb-4">Los y las integrantes del equipo son estudiantes del grado de Ingeniería Informática de entre 20 y 21 años.</p>
+                        <p class="lead mb-4">Los y las integrantes del equipo son estudiantes del grado de Ingeniería Informática de entre 21 y 22 años.</p>
 						<p class="lead mb-4">Algunas de las integrantes del proyecto viven en primera persona la despoblación de sus pueblos, de lo que surge la idea de realizar esta aplicación para mostrar al mundo todas las posiblidades de vivir y trabajar en el mundo rural.</p>
                     </div>
 					<div width="100%" style="position: relative; margin-bottom:5px;">
