--- a/about.html
+++ b/about.html
@@ -54,10 +54,10 @@
                         <span class="ms-2 fs-4" style="text-shadow: 1px 1px 10px black;">Vive Rural</span>
                     </a>
                     <nav class="nav nav-masthead justify-content-center">
-                        <a class="nav-link" style="text-shadow: 1px 1px 4px black;" href="./index.html">Home</a>
-						<a class="nav-link" style="text-shadow: 1px 1px 4px black;" href="./news.html">News</a>
-						<a class="nav-link" style="text-shadow: 1px 1px 4px black;" href="./download.html">Download</a>
-                        <a class="nav-link active" style="text-shadow: 1px 1px 4px black;" href="./about.html">About</a>
+                        <a class="nav-link" style="text-shadow: 1px 1px 4px black;" href="./index">Home</a>
+						<a class="nav-link" style="text-shadow: 1px 1px 4px black;" href="./news">News</a>
+						<a class="nav-link" style="text-shadow: 1px 1px 4px black;" href="./download">Download</a>
+                        <a class="nav-link active" style="text-shadow: 1px 1px 4px black;" href="./about">About</a>
                     </nav>
                 </div>
             </header>
