Corregidos enlaces index a ./

--- a/about.html
+++ b/about.html
@@ -49,12 +49,12 @@
                     <!-- Text decorations classes -->
                     <!-- https://getbootstrap.com/docs/5.2/utilities/text/#font-size -->
 
-                    <a href="./index.html" class="text-decoration-none">
+                    <a href="./" class="text-decoration-none">
                         <img width="40" height="40" src="static/images/viverural.png" style="margin-bottom:5px; box-shadow: 0px 0px 6px rgb(119, 119, 119); border-radius: 11px;"/>
                         <span class="ms-2 fs-4" style="text-shadow: 1px 1px 10px black;">Vive Rural</span>
                     </a>
                     <nav class="nav nav-masthead justify-content-center">
-                        <a class="nav-link" style="text-shadow: 1px 1px 4px black;" href="./index">Home</a>
+                        <a class="nav-link" style="text-shadow: 1px 1px 4px black;" href="./">Home</a>
 						<a class="nav-link" style="text-shadow: 1px 1px 4px black;" href="./news">News</a>
 						<a class="nav-link" style="text-shadow: 1px 1px 4px black;" href="./download">Download</a>
                         <a class="nav-link active" style="text-shadow: 1px 1px 4px black;" href="./about">About</a>
